original-headers/tcrdb.h


typedef struct {                         
  int fd;                                
  TTSOCK *sock;                          
  int ecode;                             
} TCRDB;
enum {                                   
  TTESUCCESS,                            
  TTEINVALID,                            
  TTENOHOST,                             
  TTEREFUSED,                            
  TTESEND,                               
  TTERECV,                               
  TTEKEEP,                               
  TTENOREC,                              
  TTEMISC = 9999                         
};
enum {                                   
  RDBXOLCKREC = 1 << 0,                  
  RDBXOLCKGLB = 1 << 1                   
};
enum {                                   
  RDBMONOULOG = 1 << 0                   
};
const char *tcrdberrmsg(int ecode);
TCRDB *tcrdbnew(void);
void tcrdbdel(TCRDB *rdb);
int tcrdbecode(TCRDB *rdb);
bool tcrdbopen(TCRDB *rdb, const char *host, int port);
bool tcrdbclose(TCRDB *rdb);
bool tcrdbput(TCRDB *rdb, const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tcrdbput2(TCRDB *rdb, const char *kstr, const char *vstr);
bool tcrdbputkeep(TCRDB *rdb, const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tcrdbputkeep2(TCRDB *rdb, const char *kstr, const char *vstr);
bool tcrdbputcat(TCRDB *rdb, const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tcrdbputcat2(TCRDB *rdb, const char *kstr, const char *vstr);
bool tcrdbputshl(TCRDB *rdb, const void *kbuf, int ksiz, const void *vbuf, int vsiz, int width);
bool tcrdbputshl2(TCRDB *rdb, const char *kstr, const char *vstr, int width);
bool tcrdbputnr(TCRDB *rdb, const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tcrdbputnr2(TCRDB *rdb, const char *kstr, const char *vstr);
bool tcrdbout(TCRDB *rdb, const void *kbuf, int ksiz);
bool tcrdbout2(TCRDB *rdb, const char *kstr);
void *tcrdbget(TCRDB *rdb, const void *kbuf, int ksiz, int *sp);
char *tcrdbget2(TCRDB *rdb, const char *kstr);
bool tcrdbget3(TCRDB *rdb, TCMAP *recs);
int tcrdbvsiz(TCRDB *rdb, const void *kbuf, int ksiz);
int tcrdbvsiz2(TCRDB *rdb, const char *kstr);
bool tcrdbiterinit(TCRDB *rdb);
void *tcrdbiternext(TCRDB *rdb, int *sp);
char *tcrdbiternext2(TCRDB *rdb);
TCLIST *tcrdbfwmkeys(TCRDB *rdb, const void *pbuf, int psiz, int max);
TCLIST *tcrdbfwmkeys2(TCRDB *rdb, const char *pstr, int max);
int tcrdbaddint(TCRDB *rdb, const void *kbuf, int ksiz, int num);
double tcrdbadddouble(TCRDB *rdb, const void *kbuf, int ksiz, double num);
void *tcrdbext(TCRDB *rdb, const char *name, int opts,
               const void *kbuf, int ksiz, const void *vbuf, int vsiz, int *sp);
char *tcrdbext2(TCRDB *rdb, const char *name, int opts, const char *kstr, const char *vstr);
bool tcrdbsync(TCRDB *rdb);
bool tcrdbvanish(TCRDB *rdb);
bool tcrdbcopy(TCRDB *rdb, const char *path);
bool tcrdbrestore(TCRDB *rdb, const char *path, uint64_t ts);
bool tcrdbsetmst(TCRDB *rdb, const char *host, int port);
uint64_t tcrdbrnum(TCRDB *rdb);
uint64_t tcrdbsize(TCRDB *rdb);
char *tcrdbstat(TCRDB *rdb);
TCLIST *tcrdbmisc(TCRDB *rdb, const char *name, int opts, const TCLIST *args);
enum {                                   
  RDBITLEXICAL = TDBITLEXICAL,           
  RDBITDECIMAL = TDBITDECIMAL,           
  RDBITOPT = TDBITOPT,                   
  RDBITVOID = TDBITVOID,                 
  RDBITKEEP = TDBITKEEP                  
};
typedef struct {                         
  TCRDB *rdb;                            
  TCLIST *args;                          
} RDBQRY;
enum {                                   
  RDBQCSTREQ = TDBQCSTREQ,               
  RDBQCSTRINC = TDBQCSTRINC,             
  RDBQCSTRBW = TDBQCSTRBW,               
  RDBQCSTREW = TDBQCSTREW,               
  RDBQCSTRAND = TDBQCSTRAND,             
  RDBQCSTROR = TDBQCSTROR,               
  RDBQCSTROREQ = TDBQCSTROREQ,           
  RDBQCSTRRX = TDBQCSTRRX,               
  RDBQCNUMEQ = TDBQCNUMEQ,               
  RDBQCNUMGT = TDBQCNUMGT,               
  RDBQCNUMGE = TDBQCNUMGE,               
  RDBQCNUMLT = TDBQCNUMLT,               
  RDBQCNUMLE = TDBQCNUMLE,               
  RDBQCNUMBT = TDBQCNUMBT,               
  RDBQCNUMOREQ = TDBQCNUMOREQ,           
  RDBQCNEGATE = TDBQCNEGATE,             
  RDBQCNOIDX = TDBQCNOIDX                
};
enum {                                   
  RDBQOSTRASC = TDBQOSTRASC,             
  RDBQOSTRDESC = TDBQOSTRDESC,           
  RDBQONUMASC = TDBQONUMASC,             
  RDBQONUMDESC = TDBQONUMDESC            
};
bool tcrdbtblput(TCRDB *rdb, const void *pkbuf, int pksiz, TCMAP *cols);
bool tcrdbtblputkeep(TCRDB *rdb, const void *pkbuf, int pksiz, TCMAP *cols);
bool tcrdbtblputcat(TCRDB *rdb, const void *pkbuf, int pksiz, TCMAP *cols);
bool tcrdbtblout(TCRDB *rdb, const void *pkbuf, int pksiz);
TCMAP *tcrdbtblget(TCRDB *rdb, const void *pkbuf, int pksiz);
bool tcrdbtblsetindex(TCRDB *rdb, const char *name, int type);
int64_t tcrdbtblgenuid(TCRDB *rdb);
RDBQRY *tcrdbqrynew(TCRDB *rdb);
void tcrdbqrydel(RDBQRY *qry);
void tcrdbqryaddcond(RDBQRY *qry, const char *name, int op, const char *expr);
void tcrdbqrysetorder(RDBQRY *qry, const char *name, int type);
void tcrdbqrysetmax(RDBQRY *qry, int max);
TCLIST *tcrdbqrysearch(RDBQRY *qry);
bool tcrdbqrysearchout(RDBQRY *qry);
TCLIST *tcrdbqrysearchget(RDBQRY *qry);
TCMAP *tcrdbqryrescols(TCLIST *res, int index);