original-headers/tculog.h


#define TCULSUFFIX     ".ulog"           
#define TCULMAGICNUM   0xc9              
#define TCULMAGICNOP   0xca              
#define TCULRMTXNUM    31                
typedef struct {                         
  pthread_mutex_t rmtxs[TCULRMTXNUM];    
  pthread_rwlock_t rwlck;                
  pthread_cond_t cnd;                    
  pthread_mutex_t wmtx;                  
  char *base;                            
  uint64_t limsiz;                       
  int max;                               
  int fd;                                
  uint64_t size;                         
  void *aiocbs;                          
  int aiocbi;                            
  uint64_t aioend;                       
} TCULOG;
typedef struct {                         
  TCULOG *ulog;                          
  uint64_t ts;                           
  int num;                               
  int fd;                                
  char *rbuf;                            
  int rsiz;                              
} TCULRD;
typedef struct {                         
  int fd;                                
  TTSOCK *sock;                          
  char *rbuf;                            
  int rsiz;                              
} TCREPL;
TCULOG *tculognew(void);
void tculogdel(TCULOG *ulog);
bool tculogsetaio(TCULOG *ulog);
bool tculogopen(TCULOG *ulog, const char *base, uint64_t limsiz);
bool tculogclose(TCULOG *ulog);
int tculogrmtxidx(TCULOG *ulog, const char *kbuf, int ksiz);
bool tculogbegin(TCULOG *ulog, int idx);
bool tculogend(TCULOG *ulog, int idx);
bool tculogwrite(TCULOG *ulog, uint64_t ts, uint32_t sid, const void *ptr, int size);
TCULRD *tculrdnew(TCULOG *ulog, uint64_t ts);
void tculrddel(TCULRD *ulrd);
void tculrdwait(TCULRD *ulrd);
const void *tculrdread(TCULRD *ulrd, int *sp, uint64_t *tsp, uint32_t *sidp);
bool tculogadbput(TCULOG *ulog, uint32_t sid, TCADB *adb,
                  const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tculogadbputkeep(TCULOG *ulog, uint32_t sid, TCADB *adb,
                      const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tculogadbputcat(TCULOG *ulog, uint32_t sid, TCADB *adb,
                     const void *kbuf, int ksiz, const void *vbuf, int vsiz);
bool tculogadbout(TCULOG *ulog, uint32_t sid, TCADB *adb, const void *kbuf, int ksiz);
int tculogadbaddint(TCULOG *ulog, uint32_t sid, TCADB *adb, const void *kbuf, int ksiz, int num);
double tculogadbadddouble(TCULOG *ulog, uint32_t sid, TCADB *adb,
                          const void *kbuf, int ksiz, double num);
bool tculogadbvanish(TCULOG *ulog, uint32_t sid, TCADB *adb);